# src/api/swagger/swagger.yaml
@@ -1,11 +1,11 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
-  title: Hello World App
+  version: "1.0.0"
+  title: Replayjs example API
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths
-basePath: /
+basePath: /api
 #
 schemes:
   # tip: remove http to make production-grade
@@ -18,166 +18,63 @@ consumes:
 produces:
   - application/json
 
-
-
 paths:
-  /person/{id}:
-    x-swagger-router-controller: person
+
+  /blob/{id}:
+    x-swagger-router-controller: blob
     get:
-      description: Gets a specific person
-      operationId: showPerson
+      description: get json blob by id
+      operationId: showBlob
       parameters:
         - name: id
           in: path
-          description: id of user
+          description: blob id
           required: true
           type: string
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/PersonResponse"
-
+            $ref: "#/definitions/Blob"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
 
-    put:
-      description: upsert a person
-      operationId: upsertPerson
-      parameters:
-        - name: id
-          in: path
-          description: id of user
-          required: true
-          type: string
-        - in: body
-          name: body
-          description: Person object data to update
-          required: true
-          schema:
-            $ref: '#/definitions/Person'
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/PersonResponse"
-
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-
-    patch:
-      description: partial update of a person
-      operationId: patchPerson
-      parameters:
-        - name: id
-          in: path
-          description: id of user
-          required: true
-          type: string
-        - name: JsonPatch
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/PatchRequest"
-
-      responses:
-        "204":
-          description: Success
-          schema:
-            $ref: "#/definitions/PersonResponse"
-
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-
-    delete:
-      description: delete a specific user
-      operationId: destroyPerson
-      parameters:
-        - name: id
-          in: path
-          description: id of user
-          required: true
-          type: string
-      responses:
-        200:
-          description: Success
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        default:
-            description: Error
-            schema:
-              $ref: "#/definitions/ErrorResponse"
-  /person:
-    x-swagger-router-controller: person
-    get:
-      description: Returns a list of all persons
-      operationId: indexPerson
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/PersonListResponse"
-
+  /blob:
+    x-swagger-router-controller: blob
     post:
-      description: Creates a person
-      operationId: createPerson
+      description: Post a json blob
+      operationId: createBlob
       parameters:
-        - in: body
-          name: body
-          description: Person object added to the databse
+        - name: body
+          in: body
+          description: The json blob to post
           required: true
           schema:
-            $ref: '#/definitions/Person'
-
+            $ref: "#/definitions/Blob"
       responses:
         "201":
           description: Success
           schema:
-            $ref: "#/definitions/PersonResponse"
-
+            $ref: "#/definitions/BlobResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
 
-
-
   /swagger:
     x-swagger-pipe: swagger_raw
+
 # complex objects have schema definitions
 definitions:
-  PersonListResponse:
-    type: array
-    items:
-      type: object
-      properties:
-        _id:
-          type: string
-        name:
-          type: string
-        description:
-          type: string
-        age:
-          type: integer
-
-  PersonResponse:
+  BlobResponse:
+    description: Response after posting a Blob
     required:
-      - _id
+      - id
     properties:
-      _id:
+      id:
         type: string
-      name:
-        type: string
-      description:
-        type: string
-      age:
-        type: integer
 
   PatchRequest:
     type: array
@@ -211,21 +108,9 @@ definitions:
       description: A string containing a JSON Pointer value.
 
 # Post definitions
-  Person:
-    title: A person
+  Blob:
+    title: A json blob
     type: object
-    required:
-      - name
-      - description
-      - age
-    properties:
-      name:
-        type: string
-      description:
-        type: string
-      age:
-        type: integer
-
 
   ErrorResponse:
     required:
